11-security/04-serviceaccount.yaml
---
# Pod using ServiceAccount
# Shows how to specify a ServiceAccount for a pod
apiVersion: v1
kind: Pod
metadata:
  name: web-app-pod
  namespace: production
spec:
  # Specify the ServiceAccount to use
  serviceAccountName: web-app-service-account
  
  # Override the automountServiceAccountToken setting at pod level
  # This takes precedence over the ServiceAccount setting
  automountServiceAccountToken: false
  
  containers:
  - name: app
    image: nginx:1.25
    ports:
    - containerPort: 80
    
    # The service account token (if mounted) will be available at:
    # /var/run/secrets/kubernetes.io/serviceaccount/token
    # /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
    # /var/run/secrets/kubernetes.io/serviceaccount/namespace
